# aortica

./: .dockerignore  .env.example  .gitignore  AI-Enabled ECG Analysis Technical Landscape, Open-Source Gaps, and Commercial Opportunities.md  Dockerfile.edge  Dockerfile.server  LICENSE  Makefile  PRD-2.md  PRD.md  README.md  aortica-edge.service  create_pi_image_script.sh  deep-research-report.md  docker-compose.full.yml  docker-compose.prod.yml  docker-compose.yml  feedback.db  integration.example.yaml  mkdocs.yml  plugins.example.yaml  progress.txt  project-plan.md  pyproject.toml  regulatory_targets.yaml  test_output.txt
.agents/workflows/: ralph.md
.claude/: launch.json
.github/workflows/: android_build.yml  ci.yml  docs.yml  federated_release.yml  pages.yml  release.yml
aortica/: __init__.py
aortica/api/: __init__.py  admin_endpoints.py  analytics_endpoints.py  app.py  audit_endpoints.py  auth.py  batch_predict.py  clinical_suggestions.py  compare.py  ecg_service.proto  ecg_service_pb2.py  ecg_service_pb2.pyi  ecg_service_pb2_grpc.py  edge_endpoints.py  federated_endpoints.py  feedback.py  grpc_server.py  integration_endpoints.py  mobile_manifest.py  notification_endpoints.py  predict.py  rate_limiter.py  report_endpoints.py  result_endpoints.py  smart_on_fhir.py  subscription_endpoints.py  validation_endpoints.py  workflow_endpoints.py  worklist_endpoints.py
aortica/audit/: __init__.py  logger.py
aortica/cli/: __init__.py  audit_cmd.py  benchmark.py  build_index_cmd.py  compare_cmd.py  edge_cmd.py  federated_cmd.py  hardware_benchmark_cmd.py  info.py  integration_cmd.py  main.py  performance_card_cmd.py  plugin_cmd.py  predict.py  profile_cmd.py  train.py  validation_cmd.py
aortica/data/: __init__.py  augmentations.py  dataset.py  mimic_iv_ecg.py
aortica/edge/: __init__.py  deploy_profiles.py  distillation.py  hardware_benchmark.py  (+10 more)
data/: clinical_suggestions.json  urgency_rules.yaml
docs/: index.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  manifest.json
landing/: index.html  main.js  robots.txt  sitemap.xml  styles.css
tests/: conftest.py  test_packaging.py  test_scaffolding.py
(+371 files in other folders)
