[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aortica"
version = "0.2.0"
description = "Open-source AI ECG analysis platform"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Aortica Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "wfdb>=4.0",
    "pydicom>=2.4",
    "pandas>=2.0",
]

[project.scripts]
aortica = "aortica.cli:main"
aortica-server = "aortica.api:run_server"

[project.optional-dependencies]
torch = [
    "torch>=2.0",
]
tf = [
    "tensorflow>=2.13",
]
signal = [
    "neurokit2>=0.2",
]
api = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "python-multipart>=0.0.6",
]
grpc = [
    "grpcio>=1.56",
    "grpcio-tools>=1.56",
]
cli = [
    "click>=8.1",
    "rich>=13.0",
]
edge = [
    "onnx>=1.14",
    "onnxruntime>=1.15",
]
scan = [
    "opencv-python-headless>=4.8",
    "pdfplumber>=0.9",
]
hub = [
    "huggingface-hub>=0.16",
]
auth = [
    "authlib>=1.2",
    "PyJWT>=2.8",
    "itsdangerous>=2.1",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
include = ["aortica*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
